salesforce_configs/metadata_configurations/retrieveEndpointOutput/objects/Order.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__RequestedCompletionDate__c</fullName>
        <label>Requested Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingName__c</fullName>
        <label>Shipping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StatusImageName__c</fullName>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalMonthlyDiscount__c</fullName>
        <label>Total : Monthly Discount</label>
        <summarizedField>OrderItem.vlocity_cmt__RecurringDiscountPrice__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalOneTimeDiscount__c</fullName>
        <label>Total : One Time Discount</label>
        <summarizedField>OrderItem.vlocity_cmt__OneTimeDiscountPrice__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date of last validation run</description>
        <inlineHelpText>Date of last validation run</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from last validation run</description>
        <inlineHelpText>Message from last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Status of last validation run</description>
        <inlineHelpText>Status of last validation run</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>ORDER.NAME</columns>
        <columns>PRICEBOOK2.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.TOTAL_AMOUNT</columns>
        <columns>ORDERS.EFFECTIVE_DATE</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>ORDER.NAME</columns>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>ORDER.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <listViews>
        <fullName>Orders_for_B2O_Accounts</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>ORDER.NAME</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <columns>ORDERS.CREATED_DATE</columns>
        <columns>vlocity_cmt__RequestedCompletionDate__c</columns>
        <columns>vlocity_cmt__Pricebook__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__AccountRecordType__c</field>
            <operation>contains</operation>
            <value>B2O</value>
        </filters>
        <label>Orders for B2O Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>B2O_Order</fullName>
        <active>true</active>
        <label>B2O Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Order</fullName>
        <active>true</active>
        <description>Do not use this record type when creating Order. It&apos;s used only for closed orders.</description>
        <label>Closed Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneOrder</fullName>
        <active>true</active>
        <label>MobilePhoneOrder</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>B2O_Order_Installation_Date</fullName>
        <active>true</active>
        <description>Desired installation date must be a working day and at minimum the next working day.</description>
        <errorConditionFormula>OR(CASE(MOD(telia_Desired_Installation_Date__c - DATE(1900, 1, 7), 7), 0, 0, 6, 0, 1) = 0, telia_Desired_Installation_Date__c - TODAY() &lt; 1)</errorConditionFormula>
        <errorMessage>Desired installation date must be a working day and at minimum the next working day.</errorMessage>
    </validationRules>
</CustomObject>